2009-06-18  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed formatting
	* Fixed bug: Fallback to default link if readLink could not be established

2009-06-15  Oliver Hader  <oliver@typo3.org>

	* Set version to 1.3.0-dev
	* Cleanup: Remove structures that depent on specific TYPO3 versions
	* Cleanup: Set requirement to TYPO3 4.3.0
!!!	* Cleanup: Removed memcached features - use a proper MySQL query cache instead
	* Added feature: Integrated assure configurations for using write/master database

2009-06-15  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Defined checks for TYPO3 4.2.0-4.5.0

2009-06-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Defining XCLASS only worked for TYPO3 4.2.0 but not for patch level releases
	* Cleanup: Defined proper SVN properties, fixed formatting and removed unused stuff
	* Cleanup: Fixed naming and base class inclusion

2008-04-26  Fernando Arconada  <fernando.arconada@gmail.com>

	* Initial release